--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
-# application.yml  —— 本地有默认值；线上用环境变量覆盖
+# application.yml —— 本地默认用 MySQL；线上用环境变量覆盖
 server:
-  port: ${PORT:8080}   # Railway/Render 会注入 PORT；本地默认 8080
+  port: ${PORT:8080}   # Render/其他平台会注入 PORT，本地默认 8080
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # 兼容 Railway 的 MYSQL* 环境变量；本地有默认值
+    # 兼容云平台提供的 MYSQL* 环境变量；本地默认指向 localhost
     url: jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:bbs}?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: ${MYSQLUSER:root}
     password: ${MYSQLPASSWORD:1234}
@@ -27,14 +27,20 @@ app:
     # 线上用环境变量覆盖：JWT_SECRET / JWT_EXPIRE_MINUTES
     secret: ${JWT_SECRET:CHANGE_ME_TO_64+_RANDOM_CHARS_____________________________________}
     expire-minutes: ${JWT_EXPIRE_MINUTES:120}
-  # 允许的前端域名（逗号分隔），用于 CORS 配置读取
+  # 允许的前端域名（逗号分隔），被 CorsConfig 读取
   allowed-origins: ${ALLOWED_ORIGINS:http://localhost:5173}
 
-  # 在 Render 上：用 H2 文件库（设置 PROFILE=render 即启用）
-  spring.config.activate.on-profile: render
-  spring:
-    datasource:
-      driver-class-name: org.h2.Driver
-      url: jdbc:h2:file:./data/app;DB_CLOSE_DELAY=-1;MODE=MySQL;DATABASE_TO_UPPER=false
-      username: sa
-      password:
+---
+# ===== Render 专用分节：启用 render profile 时，切换到 H2 文件库 =====
+spring:
+  config:
+    activate:
+      on-profile: render
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:./data/app;DB_CLOSE_DELAY=-1;MODE=MySQL;DATABASE_TO_UPPER=false
+    username: sa
+    password:
+  # 如启用了 Flyway 且没有 H2 脚本，先关闭，避免启动报 "no such table"
+  flyway:
+    enabled: false
